trunk/Archive2/fe/8f0e2bcf4d7978/output
main.cpp: In function 'int main()':
main.cpp:14:6: error: missing template arguments before '<<' token
     A<<int>::i = 3;
      ^
main.cpp:14:8: error: expected primary-expression before 'int'
     A<<int>::i = 3;
        ^
main.cpp:16:5: error: 'cout' is not a member of 'std'
     std::cout << A<float::i << std::endl;
     ^
main.cpp:16:37: error: template argument 1 is invalid
     std::cout << A<float::i << std::endl;
                                     ^
